Added About, Projects with data fetch from JSON functionality and services page design update

--- a/about.html
+++ b/about.html
@@ -18,13 +18,22 @@
 
     <!-- Main Content -->
     <main>
-        <div class="container">
-            <h1>About Us</h1>
-            <hr>
-        </div>
-        <!-- <div>
-                    <img src="/Assets/port-pic-edit1.png" alt="" height="30%" class="cover bg-center ">
-                </div> -->
+        <section class="container-fluid p-4 text-white">
+            <div>
+                <h1>About Us</h1>
+            </div>
+            <article class="row" id="AboutSection">
+                <div class="col-lg-6 col-md-12 text-center pb-2" id="AboutMe">
+                    <p class="m-0" id="AboutDesc"></p>
+                </div>
+                <aside class="col-lg-6 col-md-12 text-center" id="AboutImg">
+                    <img src="/Assets/Portfolio.JPG"  class="rounded" id="PortfolioImg" alt="Profile Photo of Viraj Shah">
+                    
+                </aside>
+            </article>
+            
+        </section>
+
     </main>
 
     <!-- Footer -->
