--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,41 @@
 
     <!-- Main Content -->
     <main>
-        <div class="container">
-            <h1>Hello World</h1>
-            <hr>
+        <div class="container-fluid text-white p-4">
+            <div>
+                <h1>Projects</h1>
+                <hr>
+            </div>
+            <div class="row p-5">
+                <div class="card col-lg-6 bg-dark p-2 text-center">
+                    <div id="Project1" class="card-body ">
+                        <div id="ProjectImage" >
+                            <img src=".." alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="card col-lg-6 bg-dark p-2 text-center">
+                    <div id="Project2" class="card-body ms-auto">
+                        <div id="ProjectImage" class="p-4">
+                            <img src="/Assets/Mentoring-System.jpg" alt="" width="40%">
+                        </div>
+                    </div>
+                </div>
+                <div class="card col-lg-6 bg-dark p-2 text-center">
+                    <div id="Project3" class="card-body">
+                        <div id="ProjectImage" class="p-4">
+                            <img src="/Assets/biobook.jpg" alt="" width="40%">
+                        </div>
+                    </div>
+                </div>
+                <div class="card col-lg-6 bg-dark p-2 text-center">
+                    <div id="Project4" class="card-body">
+                        <div id="ProjectImage" class="p-4">
+                            <img src="/Assets/blogspot.jpg" alt="" width="40%">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
