--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
     <!-- Main Content -->
     <main>
-        <div class="container-fluid  text-center text-white">
+        <div class="container-fluid  text-center text-white" id="mainContent">
             <div>
                 <h1 class="display-1">VIRAJ SHAH</h1>                
             </div>
-            <div>
+            <div class="pt-5">
                 <h3 class="display-6">A website to showcase of myself and my work to the world.</h3>
             </div>
-            <div>        
+            <div class="pt-5">        
                 <h5>Welcome World! This website is a showcase of myself and my work or projects I have created.</h5>
             
             </div>
