Design changes of overall website and other minor additions

--- a/about.html
+++ b/about.html
@@ -18,22 +18,19 @@
 
     <!-- Main Content -->
     <main>
-        <section class="container-fluid p-4 text-white">
-            <div>
-                <h1>About Us</h1>
-            </div>
-            <article class="row" id="AboutSection">
-                <div class="col-lg-6 col-md-12 text-center pb-2" id="AboutMe">
-                    <p class="m-0" id="AboutDesc"></p>
+        <section class="container-fluid text-center p-4">
+            <h1 class="text-center">About Me</h1>
+            <hr>
+            <article class="row p-2">
+                <div class="col-lg-6 " id="AboutMe">
+                    <p id="AboutDesc"></p>
                 </div>
-                <aside class="col-lg-6 col-md-12 text-center" id="AboutImg">
-                    <img src="/Assets/Portfolio.JPG"  class="rounded" id="PortfolioImg" alt="Profile Photo of Viraj Shah">
-                    
+
+                <aside class="col-lg-6 d-flex justify-content-center"  id="AboutImg">
+                    <img src="/Assets/Portfolio.JPG"  class="rounded " id="PortfolioImg" alt="Profile Photo of Viraj Shah" >
                 </aside>
             </article>
-            
         </section>
-
     </main>
 
     <!-- Footer -->
