--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 
     <!-- Main Content -->
     <main>
-        <div class="container-fluid  text-center text-white" id="mainContent">
+        <div class="container-fluid  text-center " id="mainContent">
             <div>
                 <h1 class="display-1">VIRAJ SHAH</h1>                
             </div>
             <div class="pt-5">
-                <h3 class="display-6">A website to showcase of myself and my work to the world.</h3>
+                <h3 class="display-6">A website to showcase myself and my work to the world.</h3>
             </div>
-            <div class="pt-5">        
-                <h5>Welcome World! This website is a showcase of myself and my work or projects I have created.</h5>
+            <div class=" pt-5 m-auto text-center w-75">        
+                <h5 class="mission">I am a developer, coder, designer, gamer and more. I am on the path of developing myself and become more advance in new and different areas and also have fun along the way. </h5>
+                <h5 class="mission mt-4 badge bg-warning"><a href="about.html">Come and have a look at my journey
+                <i class="fa-solid fa-arrow-right"></i></a></h5>
             
             </div>
         </div>
