--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
 
     <!-- Main Content -->
     <main>
-        <div class="container-fluid bg-light p-3">
+        <div class="container-fluid bg-white p-3">
             <h1 class="text-center p-4">Our Services</h1>
             
             <div class="services row text-center ">
@@ -42,7 +42,7 @@
 
                 <div class="card text-dark col-lg-6" style="width: 25rem; height: auto;">   
                     <img src="/Assets/services/software development.jpg" class="card-img-top" alt="...">
-                    <!-- Image Credit - https://unsplash.com/photos/Y5yxdx2a4PI?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink -->
+                    <!-- Image Credit - https://unsplash.com/photos/jG8nlwLRZTM?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink -->
                     
                     <div class="card-body rounded-bottom">
                         <h5 class="card-title">Software Development</h5>
