Minor design changes for index and about page and form sumbit action addition

--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
             <article class="row p-2">
                 <div class="col-lg-6 " id="AboutMe">
                     <p id="AboutDesc"></p>
+                    <img src="/Assets/logo.png" alt="Viraj Shah Brand Logo" id="BrandLogo">
                 </div>
 
                 <aside class="col-lg-6 d-flex justify-content-center"  id="AboutImg">
