--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             <h1>Contact Us</h1>
             <hr>
 
-            <form class="contactForm w-50 m-auto">
+            <form class="contactForm w-50 m-auto" action="about.html" id="formSubmit">
                 <div class="form-group mt-2">
                   <label for="exampleFormControlInput1">Full Name</label>
                   <input type="text" class="form-control mt-2" id="FullName" placeholder="Enter your Full Name" required>
@@ -38,7 +38,7 @@
                   <textarea class="form-control mt-2" id="UserMessage" rows="3" placeholder="Type your message" required></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary mt-3">Submit</button>
+                <button type="submit"  class="btn btn-primary mt-3">Submit</button>
             </form>
 
         </div>
