--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                   <textarea class="form-control mt-2" id="UserMessage" rows="3" placeholder="Type your message" required></textarea>
                 </div>
 
-                <button type="submit"  class="btn btn-primary mt-3">Submit</button>
+                <button type="submit" id="btnsubmit" class="btn btn-primary mt-3">Submit</button>
             </form>
 
         </div>
